--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,68 @@
+html,
+body,
+#root {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  color: white;
+}
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* COLORES */
+  --negro: #131313;
+  --negro-claro: #272727;
+  --negro-muy-claro: #3b3b3b;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --gris: #808080;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --blanco-claro: #f1f1f1; /* Fondo gris claro */
+  --blanco-muy-claro: #dddddd;
+  --blanco-texto-navbar:#ddddddb9;
+
+  --verde: #1b4332;
+  --verde-logo: #138559;
+  --verde-claro: #00ff95;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: "Oswald", sans-serif; /* Reemplaza "Poppins" por cualquier fuente que elijas */
+  box-sizing: border-box;
+  background-size: cover;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2.2rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Sombra con desplazamiento y difusa */
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+p {
+  font-size: 1.1rem;
+  line-height: 2rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Sombra con desplazamiento y difusa */
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+footer a { 
+  font-size: 1.1rem;
+  line-height: 2rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Sombra con desplazamiento y difusa */
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2rem; /* Reducir aún más el tamaño de la fuente */
   }
 }
