--- a/src/sections/Navbar/Navbar.css
+++ b/src/sections/Navbar/Navbar.css
@@ -3,6 +3,7 @@ OPCIONES GENERALES
 =============================== */
 header {
     font-family: "Open Sans", sans-serif;
+    padding: 1rem 0;
 }
 
 .navbar {
@@ -11,14 +12,12 @@ header {
     position: fixed;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1rem;
-    background-color: transparent;
     background-color: transparent;
     z-index: 10;
 }
 
 /* ===============================
-OPCIONES DE LA LOGO
+OPCIONES DEL LOGO
 =============================== */
 
 .navbar__logo img {
