--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,10 @@ body,
 
   --gris: #808080;
 
+  --blanco:#fff;
   --blanco-claro: #f1f1f1; /* Fondo gris claro */
   --blanco-muy-claro: #dddddd;
-  --blanco-texto-navbar:#ddddddb9;
+  --blanco-texto-navbar:#dddddd83;
 
   --verde: #1b4332;
   --verde-logo: #138559;
