--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body,
   --blanco:#fff;
   --blanco-claro: #f1f1f1; /* Fondo gris claro */
   --blanco-muy-claro: #dddddd;
-  --blanco-texto-navbar:#dddddd83;
+  --blanco-texto-navbar:#ddddddb6;
 
   --verde: #1b4332;
   --verde-logo: #138559;
@@ -31,7 +31,7 @@ body,
 }
 
 body {
-  font-family: "Oswald", sans-serif; /* Reemplaza "Poppins" por cualquier fuente que elijas */
+  font-family: "Poppins", sans-serif; /* Reemplaza "Poppins" por cualquier fuente que elijas */
   box-sizing: border-box;
   background-size: cover;
 }
@@ -39,16 +39,16 @@ body {
 h1 {
   font-size: 2.2rem;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Sombra con desplazamiento y difusa */
-  font-family: "Oswald", sans-serif;
+  font-family: "Poppins", sans-serif;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 p {
   font-size: 1.1rem;
   line-height: 2rem;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Sombra con desplazamiento y difusa */
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
 }
 
@@ -56,7 +56,7 @@ footer a {
   font-size: 1.1rem;
   line-height: 2rem;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Sombra con desplazamiento y difusa */
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   color: white;
   text-decoration: none;
