--- a/src/sections/Beneficios/Beneficios.css
+++ b/src/sections/Beneficios/Beneficios.css
@@ -3,8 +3,9 @@ OPCIONES GENERALES DE LA SECCIÓN
 =============================== */
 .beneficios {
     width: 100%;
-    height: 100vh;
-    background-image: url(/assets/Fondo/fondo_resto.png);
+    height: 120vh;
+    /* background-image: url(/assets/Fondo/fondo_resto.png); */
+    background-color: aliceblue;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -135,3 +136,7 @@ INFO EXTRA VISIBLE AL ACTIVAR
 .columna-beneficio.activa .info-extra {
     opacity: 1;
 }
+
+/* =====================================
+MEDIA QUERIES
+===================================*/
