--- a/src/sections/Navbar/Navbar.css
+++ b/src/sections/Navbar/Navbar.css
@@ -2,7 +2,6 @@
 OPCIONES GENERALES
 =============================== */
 header {
-  font-family: "Open Sans", sans-serif;
   width: 100%;
   padding: 1rem 0;
 }
@@ -16,7 +15,6 @@ header {
   align-items: center;
   padding: 1rem 0;
   background-color: transparent;
-  transition: box-shadow 0.5s ease;
 }
 
 
@@ -27,9 +25,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/assets/Fondo/fondo_resto.png);
-  background-size: cover;
-  background-position: center;
+  background-color: #283935;
   opacity: 0;
   transition: opacity 0.5s ease;
   z-index: -1; 
@@ -41,7 +37,6 @@ header {
 }
 
 .navbar__scrolled {
-  box-shadow: 0 4px 10px var(--negro);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
 }
