--- a/src/sections/products/Products.css
+++ b/src/sections/products/Products.css
@@ -5,6 +5,9 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  background-image: url(/assets/Fondo/fondo_reticula.png);
+  background-size: cover;
+  background-position: center;
 }
 
 .main-container {
