--- a/src/sections/products/Products.css
+++ b/src/sections/products/Products.css
@@ -26,6 +26,8 @@
 .model-proyecto-container {
   height: 100%;
   cursor: grab;
+  position: relative;
+  z-index: 0;
 }
 
 .model-proyecto-container:active {
@@ -69,25 +71,30 @@ ESTILOS RIGHT SECTION
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.678);
 }
 
-.right-container h3, .right-container p, .hr-productos{
+.titulo-interrogacion,.right-container p, .hr-productos{
   width: 80%;
   margin: 0 auto;
 }
 
 .right-container h3 {
-
   font-size: 1.6rem;
-  margin-top: 2rem;
-  padding: 0 4rem;
   text-transform: uppercase;
   font-weight: 200;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.678);
 }
 
 .right-container p {
- 
+  
   text-align: justify;
   font-weight: lighter;
+}
+
+.titulo-interrogacion{
+  margin-top: 2rem;
+  justify-content: space-between;
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
 }
 
 
