--- a/src/sections/products/Products.css
+++ b/src/sections/products/Products.css
@@ -53,11 +53,20 @@
   width: 20%;
 }
 
+.icono-productos{
+  transition: fill .3s ease-in-out;
+}
+
+.icono-productos:hover{
+fill: white;
+}
+
 /*==============================================
 ESTILOS RIGHT SECTION
 ============================================== */
 .right-container {
   width: 50%;
+  height: 100%;
   display: flex;
   padding: 5rem 2rem;
   flex-direction: column;
@@ -65,13 +74,13 @@ ESTILOS RIGHT SECTION
 
 .right-container h1 {
   font-size: 2.2rem;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   font-weight: 400;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.678);
 }
 
-.titulo-interrogacion,.right-container p, .hr-productos{
+.right-container h1, .titulo-interrogacion,.right-container p, .hr-productos{
   width: 80%;
   margin: 0 auto;
 }
@@ -84,7 +93,6 @@ ESTILOS RIGHT SECTION
 }
 
 .right-container p {
-  
   text-align: justify;
   font-weight: lighter;
 }
