--- a/src/components/Botones/BotonInterrogacion.css
+++ b/src/components/Botones/BotonInterrogacion.css
@@ -1,12 +1,3 @@
-.tooltip-container {
-    position: relative;
-    display: inline-block;
-    display: flex;
-    justify-content: flex-end;
-    margin: 0 auto;
-    width: 80%;
-}
-
 .boton-interrogacion {
     width: 32px;
     height: 32px;
@@ -41,6 +32,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
-.tooltip-container:hover .tooltip-mensaje {
-    opacity: 1;
+/* Mostrar tooltip SOLO cuando haces hover en el botón */
+.boton-interrogacion:hover .tooltip-mensaje {
+  opacity: 1;
 }
