--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
 
 h1 {
   font-size: 2.2rem;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Sombra con desplazamiento y difusa */
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
   font-family: "Poppins", sans-serif;
   text-transform: uppercase;
   font-weight: 500;
