--- a/src/sections/contacto/Contacto.css
+++ b/src/sections/contacto/Contacto.css
@@ -35,7 +35,7 @@ OPCIONES GENERALES
  OPCIONES GRID IZQUIERDA
  ================================= */
 .contacto-grid-izquierda {
-  font-family: "Open Sans", sans-serif;
+padding-top: 2rem;
 }
 
 .contacto-grid-izquierda span {
