--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body,
   --blanco-claro: #f1f1f1; /* Fondo gris claro */
   --blanco-muy-claro: #dddddd;
   --blanco-texto-navbar:#ddddddb6;
+  --blanco-footer:#ffffff77;
 
   --verde: #1b4332;
   --verde-logo: #138559;
