--- a/src/sections/PersonalizarToldos/PersonalizarToldos.css
+++ b/src/sections/PersonalizarToldos/PersonalizarToldos.css
@@ -1,4 +1,142 @@
-.personalizarToldo{
+/* ============================
+OPCIONES GENERALES
+============================ */
+.menu-main {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100vh;
-    background-color: aliceblue;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding-top: 5rem;
+    z-index: 1000;
+    animation: fondo-entrada 0.4s ease forwards;
+}
+
+.menu-main.salida {
+    animation: fondo-salida 0.4s ease forwards;
+}
+
+/* ============================
+OPCIONES DEL CONTENIDO GENERAL
+============================ */
+.popup-contenido-prueba {
+    position: relative;
+    width: 90vw;
+    max-width: 90%;
+    height: 80vh;
+    max-height: 80vh;
+    overflow-y: auto;
+
+    display: flex;
+
+    box-shadow: 0 0 10px black;
+    animation: popup-entrada 0.4s ease forwards;
+}
+
+.popup-contenido-prueba.salida {
+    animation: popup-salida 0.4s ease forwards;
+}
+
+/* ============================
+CONTENEDOR IZQUIERDA
+============================ */
+.contenido-PersonalizarToldos-izquierda {
+    position: relative;
+    flex: 0 0 20%;
+    /* Ocupa el 20% */
+    background-image: url('/assets/Fondo/fondoIzquierdaPersonalizarToldos.jpg');
+    background-size: cover;
+    background-position: bottom center;
+    overflow: hidden;
+}
+
+.contenido-PersonalizarToldos-izquierda::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    /* gris con opacidad */
+    z-index: 0;
+    /* detrás del contenido */
+}
+
+/* Asegúrate de que el contenido esté por encima del ::after */
+.contenido-PersonalizarToldos-izquierda>* {
+    position: relative;
+    z-index: 1;
+}
+
+.contenido-PersonalizarToldos-izquierda h2 {
+    padding: 2rem;
+    font-weight: 400;
+    font-size: xx-large;
+    text-wrap: balance;
+}
+
+.contenido-PersonalizarToldos-izquierda p{
+    padding: 0 2rem;
+}
+
+/* ============================
+OPCIONES DEL CONTENEDOR DERECHA
+============================ */
+.contenido-PersonalizarToldos-derecha {
+    flex: 1;/* toma el resto del espacio automáticamente */
+    padding: 2rem;
+}
+
+/* ============================
+ANIMACIONES DE OPACIDAD Y ENTRADA Y SALIDA DEL MENU
+============================ */
+@keyframes popup-entrada {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes popup-salida {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    to {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+}
+
+
+
+@keyframes fondo-entrada {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fondo-salida {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
 }
