--- a/src/sections/PersonalizarToldos/PersonalizarToldos.css
+++ b/src/sections/PersonalizarToldos/PersonalizarToldos.css
@@ -61,7 +61,7 @@ CONTENEDOR IZQUIERDA
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     /* gris con opacidad */
     z-index: 0;
     /* detrás del contenido */
@@ -80,17 +80,66 @@ CONTENEDOR IZQUIERDA
     text-wrap: balance;
 }
 
-.contenido-PersonalizarToldos-izquierda p{
+.contenido-PersonalizarToldos-izquierda p {
     padding: 0 2rem;
+    text-wrap: balance;
 }
 
 /* ============================
 OPCIONES DEL CONTENEDOR DERECHA
 ============================ */
 .contenido-PersonalizarToldos-derecha {
-    flex: 1;/* toma el resto del espacio automáticamente */
+    position: relative;
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+
+    background-image: url('/assets/Fondo/fondoDerechaPersonalizarToldos.jpg');
+    background-size: cover;
     padding: 2rem;
 }
+
+.contenido-PersonalizarToldos-derecha::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* gris con opacidad */
+    z-index: 0;
+    /* detrás del contenido */
+}
+
+.contenido-PersonalizarToldos-derecha>* {
+    position: relative;
+    z-index: 1;
+}
+
+/* ============================
+OPCIONES DEL CONTENIDOD DE LA DEREHCA EN BLOQUEO
+============================ */
+.contenido-PersonalizarToldos-derecha .contenedor-Boton {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.contenido-PersonalizarToldos-derecha .contenido-bloqueado {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.contenido-PersonalizarToldos-derecha .contenido-bloqueado p {
+    margin: auto;/* centra tanto horizontal como vertical */
+    width: 100%;
+    text-align: center;
+}
+
 
 /* ============================
 ANIMACIONES DE OPACIDAD Y ENTRADA Y SALIDA DEL MENU
