--- a/src/components/Navbar/NavbarMobile.css
+++ b/src/components/Navbar/NavbarMobile.css
@@ -116,10 +116,13 @@ CONTENEDOR BOTON REALIZAR PRESUPUESTO
   display: flex;
   justify-content: left;
   align-items: flex-end;
-  padding-bottom: 7rem;
+  padding-bottom: 8rem;
   padding-left: 2rem;
 }
 
-.contenedor-boton-menu-desplegado .boton-linea{
+.contenedor-boton-menu-desplegado a{
   height: 2rem;
+  font-size: 1rem;
+  color: white;
+  text-decoration: none;
 }
