--- a/src/sections/historia/Historia.css
+++ b/src/sections/historia/Historia.css
@@ -1,82 +1,96 @@
+/* ============================
+OPCIONES GENERALES
+============================ */
 .historia {
-  height: 65vh;
+  height: 60vh;
+
+  display: flex;
+
   padding: 4rem 0;
+
   background-image: url(/assets/Fondo/fondo_historia.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.historia-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+/* ============================
+OPCIONES PARTE IZQUIERDA
+============================ */
+.historia-izquierda {
+  width: 70%;
   height: 100%;
-}
-
-.info-historia {
-  width: 60%;
+  padding-left: 4rem;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
+  justify-content: center;
+
 }
 
-.info-historia p {
-  font-size: 1rem;
-  opacity: 0.9;
-  text-align: justify;
-  font-weight: 300;
-  line-height: 1.8;
+.historia-texto {
   width: 100%;
-  text-shadow: 1px 1px 5px rgb(0, 0, 0);
 }
 
-.info-historia a {
-  width: fit-content;
+.pHistoria {
+  text-wrap: balance;
+  text-align: justify;
+}
+
+.contenedor-botonHistoria {
+  margin-top: 4rem;
+}
+
+
+/* ============================
+OPCIONES IMAGENES
+============================ */
+.historia-logo {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+
+  align-items: center;
 }
 
 .historia-logo img {
   height: 15rem;
 }
-/* ==============================
+
+/* ============================
 MEDIA QUERIES
-=============================== */
-
-@media (max-width: 1200px) {
-  .historia-container {
-    padding: 0 4rem;
+============================ */
+@media (max-width: 1024px) {
+  .historia {
+    justify-content: center;
+    height: 80vh;
   }
 
-  .info-historia {
-    height: 50%;
-    width: 50%;
+  .historia-izquierda{
+    padding: 0;
+    width: 80%;
   }
-
-  .info-historia p {
-    font-size: 1rem;
-  }
-
 }
 
-/* ===============================
-MEDIA QUERIES PANTALLA MOVIL
-================================ */
-@media (max-width: 768px) {
-  .historia {
+@media (max-width: 768px){
+  .historia{
     height: 100vh;
-    padding-top: 4rem;
-  }
-  .historia-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 2rem;
-    padding: 0;
+    padding: 0 2rem;
   }
 
-  .info-historia {
-    width: 80%;
-    height: auto;
-    padding: 0;
+  .historia-izquierda{
+    width: 100%;
+    justify-content:space-evenly;
   }
+
+  .historia-texto h1{
+    margin-top: 2rem;
+    font-size: 1.6rem;
+  }
+
+  .historia-texto p{
+    text-align: justify;
+    hyphens: auto;
+    line-height: 1.7rem;
+  }
+
 }
