--- a/src/sections/home/Home.css
+++ b/src/sections/home/Home.css
@@ -58,6 +58,14 @@ OPCIONES DE CONTENIDO
 /* ============================
 MEDIA QUERIES
 ============================ */
+@media (max-width: 1024px) {
+  .home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 @media (max-width: 768px) {
 
   .home::before {
@@ -71,18 +79,24 @@ MEDIA QUERIES
     z-index: -1;
   }
 
-  .boton-container{
+  .boton-container {
     padding: 2rem 0;
     margin: 0 auto;
   }
 
   .contenedor-home {
     padding: 0rem 2rem;
-    gap: 0;
+    gap: 2rem;
   }
 
   .contenedor-home h1 {
     font-size: 2rem;
   }
 
+  .contenedor-home p {
+    font-size: 1rem;
+    line-height: 1.7rem;
+    text-align: justify;
+    hyphens: auto;
+  }
 }
